force-app/main/default/objects/Insurance_Customer__c/Insurance_Customer__c.object-meta.xml
<CustomObject>
    <label>Insurance Customer</label>
    <nameField>
        <label>Insurance Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>