force-app/main/default/objects/Insurance_Customer__c/fields/Appointment_Data_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Data_Time__c</fullName>
    <label>Appointment Data Time</label>
    <type>DateTime</type>
</CustomField>