force-app/main/default/objects/Insurance_Customer__c/fields/CityOfResident__c.field-meta.xml
<CustomField>
    <fullName>CityOfResident__c</fullName>
    <label>CityOfResident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>