force-app/main/default/objects/Insurance_Customer__c/fields/CountOfAdultInsured__c.field-meta.xml
<CustomField>
    <fullName>CountOfAdultInsured__c</fullName>
    <label>CountOfAdultInsured</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>