force-app/main/default/objects/Insurance_Customer__c/fields/CountOfChildrenInsured__c.field-meta.xml
<CustomField>
    <fullName>CountOfChildrenInsured__c</fullName>
    <label>CountOfChildrenInsured</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>