force-app/main/default/objects/Insurance_Customer__c/fields/DestinationCountry__c.field-meta.xml
<CustomField>
    <fullName>DestinationCountry__c</fullName>
    <label>DestinationCountry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>