force-app/main/default/objects/Insurance_Customer__c/fields/DobOfEldestInsured__c.field-meta.xml
<CustomField>
    <fullName>DobOfEldestInsured__c</fullName>
    <label>DobOfEldestInsured</label>
    <type>Date</type>
</CustomField>