force-app/main/default/objects/Insurance_Customer__c/fields/Driving_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_Number__c</fullName>
    <label>Driving License Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>