force-app/main/default/objects/Insurance_Customer__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Overseas Travel</fullName>
            </value>
            <value>
                <fullName>Two Wheeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>