force-app/main/default/objects/Insurance_Customer__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <label>License Plate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>