force-app/main/default/objects/Insurance_Customer__c/fields/SourceCountry__c.field-meta.xml
<CustomField>
    <fullName>SourceCountry__c</fullName>
    <label>SourceCountry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>