force-app/main/default/objects/Insurance_Customer__c/fields/Vehicle_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Date__c</fullName>
    <label>Vehicle Registration Date</label>
    <type>Date</type>
</CustomField>